fix alt in app for text

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -997,7 +997,7 @@
           "text": {
             "value": {
               "fontFamily": "{app.fontFamily.control.text}",
-              "fontWeight": "{app.fontWeight.control.text.text}",
+              "fontWeight": "{app.fontWeight.control.text.alt}",
               "lineHeight": "{app.lineHeight.control.text}",
               "fontSize": "{config.fontSize.control.text}"
             },
@@ -1026,7 +1026,7 @@
           "text": {
             "value": {
               "fontFamily": "{app.fontFamily.control.symbol}",
-              "fontWeight": "{app.fontWeight.control.symbol.text}",
+              "fontWeight": "{app.fontWeight.control.symbol.alt}",
               "fontSize": "{config.fontSize.control.symbol}",
               "lineHeight": "{app.lineHeight.control.symbol}"
             },
@@ -2556,7 +2556,7 @@
             "value": "{config.fontWeight.medium}",
             "type": "fontWeights"
           },
-          "text": {
+          "alt": {
             "value": "{config.fontWeight.text}",
             "type": "fontWeights"
           },
@@ -2570,7 +2570,7 @@
             "value": "{config.fontWeight.medium}",
             "type": "fontWeights"
           },
-          "text": {
+          "alt": {
             "value": "{config.fontWeight.text}",
             "type": "fontWeights"
           },
