--- a/tokens/application.json
+++ b/tokens/application.json
@@ -499,7 +499,7 @@
         "border": {
           "default": {
             "type": "color",
-            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.1)"
+            "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 0%, 0.1)"
           },
           "hover": {
             "type": "color",
@@ -508,7 +508,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{config.color.neutral.alpha.border.hover} ",
+                  "value": "{config.color.grey.alpha.border.hover} ",
                   "space": "hsl"
                 }
               }
@@ -521,7 +521,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{config.color.neutral.alpha.border.active}",
+                  "value": "{config.color.grey.alpha.border.active}",
                   "space": "hsl"
                 }
               }
@@ -642,7 +642,11 @@
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 4%)"
+              "value": "{app.color.surface.fg.default}"
+            },
+            "muted": {
+              "type": "color",
+              "value": "{app.color.surface.fg.muted}"
             },
             "onSolid": {
               "type": "color",
@@ -650,11 +654,11 @@
             },
             "onTone": {
               "type": "color",
-              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 85%)"
+              "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 85%)"
             },
             "onTranslucent": {
               "type": "color",
-              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 4%)"
+              "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 4%)"
             }
           }
         },
@@ -687,6 +691,10 @@
             "solid": {
               "type": "color",
               "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 2%, 0.98)"
+            },
+            "muted": {
+              "type": "color",
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 4%, 0.4)"
             },
             "label": {
               "type": "color",
@@ -736,6 +744,10 @@
               "type": "color",
               "value": "hsl({config.color.info.hue.default}, {config.color.info.saturation.default}, 45%)"
             },
+            "muted": {
+              "type": "color",
+              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.fg.default})"
+            },
             "onSolid": {
               "type": "color",
               "value": "{app.color.surface.fg.inverted}"
@@ -779,6 +791,10 @@
             "solid": {
               "type": "color",
               "value": "hsl({config.color.success.hue.default}, {config.color.success.saturation.default}, 30%)"
+            },
+            "muted": {
+              "type": "color",
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 50%, {config.color.info.alpha.fg.default})"
             },
             "onSolid": {
               "type": "color",
