--- a/tokens/config.json
+++ b/tokens/config.json
@@ -298,6 +298,20 @@
               "value": "0.12",
               "type": "other"
             }
+          },
+          "fg": {
+            "default": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.58",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.64",
+              "type": "other"
+            }
           }
         },
         "lighten": {
@@ -364,6 +378,20 @@
             },
             "active": {
               "value": "0.48",
+              "type": "other"
+            }
+          },
+          "fg": {
+            "default": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.58",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.64",
               "type": "other"
             }
           }
@@ -444,6 +472,20 @@
             },
             "subtle": {
               "value": "0.12",
+              "type": "other"
+            }
+          },
+          "fg": {
+            "default": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.58",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.64",
               "type": "other"
             }
           }
@@ -532,6 +574,20 @@
               "value": "{config.color.info.alpha.bg.active} - 0.08",
               "type": "other"
             }
+          },
+          "fg": {
+            "default": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.58",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.64",
+              "type": "other"
+            }
           }
         },
         "lighten": {
@@ -600,6 +656,20 @@
               "value": "0.56",
               "type": "other"
             }
+          },
+          "fg": {
+            "default": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.58",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.64",
+              "type": "other"
+            }
           }
         },
         "lighten": {
@@ -662,6 +732,20 @@
             },
             "hover": {
               "value": "0.56",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.64",
+              "type": "other"
+            }
+          },
+          "fg": {
+            "default": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.58",
               "type": "other"
             },
             "active": {
@@ -738,6 +822,20 @@
             },
             "active": {
               "value": "0.48",
+              "type": "other"
+            }
+          },
+          "fg": {
+            "default": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.58",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.64",
               "type": "other"
             }
           }
