--- a/tokens/application.json
+++ b/tokens/application.json
@@ -794,7 +794,7 @@
             },
             "muted": {
               "type": "color",
-              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 50%, {config.color.info.alpha.fg.default})"
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.translucent}, 30%, {config.color.success.alpha.fg.default})"
             },
             "onSolid": {
               "type": "color",
