--- a/tokens/application.json
+++ b/tokens/application.json
@@ -600,6 +600,10 @@
               "type": "color",
               "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 35%)"
             },
+            "muted": {
+              "type": "color",
+              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%, {config.color.accent.alpha.fg.default})"
+            },
             "onSolid": {
               "type": "color",
               "value": "{app.color.surface.fg.inverted}"
@@ -840,6 +844,10 @@
               "type": "color",
               "value": "hsl({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 30%)"
             },
+            "muted": {
+              "type": "color",
+              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.translucent}, 30%, {config.color.warning.alpha.fg.default})"
+            },
             "onSolid": {
               "type": "color",
               "value": "{app.color.surface.fg.inverted}"
@@ -883,6 +891,10 @@
             "solid": {
               "type": "color",
               "value": "hsl({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 40%)"
+            },
+            "muted": {
+              "type": "color",
+              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.translucent}, 30%, {config.color.danger.alpha.fg.default})"
             },
             "onSolid": {
               "type": "color",
