fix config and renamed config.color.danger.alpha.bg.light > config.color.danger.alpha.bg.subtle

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -265,19 +265,19 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.12",
+              "value": "0.06",
               "type": "other"
             },
             "hover": {
-              "value": "0.16",
+              "value": "0.1",
               "type": "other"
             },
             "active": {
-              "value": "0.2",
+              "value": "0.14",
               "type": "other"
             },
             "subtle": {
-              "value": "0.08",
+              "value": "0.04",
               "type": "other"
             }
           },
@@ -355,15 +355,15 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.24",
+              "value": "0.16",
               "type": "other"
             },
             "hover": {
-              "value": "0.32",
+              "value": "0.24",
               "type": "other"
             },
             "active": {
-              "value": "0.4",
+              "value": "0.32",
               "type": "other"
             }
           },
@@ -441,19 +441,19 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.12",
+              "value": "0.06",
               "type": "other"
             },
             "hover": {
-              "value": "0.16",
+              "value": "0.1",
               "type": "other"
             },
             "active": {
-              "value": "0.2",
+              "value": "0.14",
               "type": "other"
             },
             "subtle": {
-              "value": "0.08",
+              "value": "0.04",
               "type": "other"
             }
           },
@@ -543,15 +543,15 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.24",
+              "value": "0.16",
               "type": "other"
             },
             "hover": {
-              "value": "0.32",
+              "value": "0.24",
               "type": "other"
             },
             "active": {
-              "value": "0.4",
+              "value": "0.32",
               "type": "other"
             }
           },
@@ -631,15 +631,15 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.32",
+              "value": "0.24",
               "type": "other"
             },
             "hover": {
-              "value": "0.4",
+              "value": "0.32",
               "type": "other"
             },
             "active": {
-              "value": "0.48",
+              "value": "0.4",
               "type": "other"
             }
           },
@@ -713,15 +713,15 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.4",
+              "value": "0.32",
               "type": "other"
             },
             "hover": {
-              "value": "0.48",
+              "value": "0.4",
               "type": "other"
             },
             "active": {
-              "value": "0.56",
+              "value": "0.48",
               "type": "other"
             }
           },
@@ -795,18 +795,18 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.24",
+              "value": "0.16",
               "type": "other"
             },
             "hover": {
-              "value": "0.32",
+              "value": "0.24",
               "type": "other"
             },
             "active": {
-              "value": "0.4",
+              "value": "0.32",
               "type": "other"
             },
-            "light": {
+            "subtle": {
               "value": "0.08",
               "type": "other"
             }
