--- a/tokens/application.json
+++ b/tokens/application.json
@@ -926,7 +926,7 @@
             },
             "checked": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%, {config.color.accent.alpha.bg.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 50%, {config.color.neutral.alpha.bg.default})"
             }
           },
           "border": {
