update grey to primary in config

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -407,7 +407,7 @@
           }
         }
       },
-      "grey": {
+      "primary": {
         "hue": {
           "default": {
             "value": "50",
