--- a/tokens/application.json
+++ b/tokens/application.json
@@ -363,7 +363,7 @@
             "bg": {
               "default": {
                 "type": "color",
-                "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 100%)"
+                "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 100%)"
               },
               "hover": {
                 "type": "color",
@@ -372,7 +372,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.grey.darken.hover}",
+                      "value": "{config.color.primary.darken.hover}",
                       "space": "hsl"
                     }
                   }
@@ -385,7 +385,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.grey.darken.active}",
+                      "value": "{config.color.primary.darken.active}",
                       "space": "hsl"
                     }
                   }
@@ -397,7 +397,7 @@
             "bg": {
               "default": {
                 "type": "color",
-                "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 96%)"
+                "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 96%)"
               },
               "hover": {
                 "type": "color",
@@ -406,7 +406,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.grey.darken.hover}",
+                      "value": "{config.color.primary.darken.hover}",
                       "space": "hsl"
                     }
                   }
@@ -419,7 +419,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.grey.darken.active}",
+                      "value": "{config.color.primary.darken.active}",
                       "space": "hsl"
                     }
                   }
@@ -431,7 +431,7 @@
             "bg": {
               "default": {
                 "type": "color",
-                "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 100%)"
+                "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 100%)"
               },
               "hover": {
                 "type": "color",
@@ -440,7 +440,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.grey.darken.hover}",
+                      "value": "{config.color.primary.darken.hover}",
                       "space": "hsl"
                     }
                   }
@@ -453,7 +453,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.grey.darken.active}",
+                      "value": "{config.color.primary.darken.active}",
                       "space": "hsl"
                     }
                   }
@@ -465,7 +465,7 @@
             "bg": {
               "default": {
                 "type": "color",
-                "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 96%)"
+                "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 96%)"
               },
               "hover": {
                 "type": "color",
@@ -474,7 +474,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.grey.darken.hover}",
+                      "value": "{config.color.primary.darken.hover}",
                       "space": "hsl"
                     }
                   }
@@ -487,7 +487,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{config.color.grey.darken.active}",
+                      "value": "{config.color.primary.darken.active}",
                       "space": "hsl"
                     }
                   }
@@ -499,7 +499,7 @@
         "border": {
           "default": {
             "type": "color",
-            "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 0%, 0.1)"
+            "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 0%, 0.1)"
           },
           "hover": {
             "type": "color",
@@ -508,7 +508,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{config.color.grey.alpha.border.hover} ",
+                  "value": "{config.color.primary.alpha.border.hover} ",
                   "space": "hsl"
                 }
               }
@@ -521,7 +521,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{config.color.grey.alpha.border.active}",
+                  "value": "{config.color.primary.alpha.border.active}",
                   "space": "hsl"
                 }
               }
@@ -530,15 +530,15 @@
         },
         "fg": {
           "default": {
-            "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 4%, 1)",
+            "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 4%, 1)",
             "type": "color"
           },
           "muted": {
-            "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 4%, 0.48)",
+            "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 4%, 0.48)",
             "type": "color"
           },
           "subtle": {
-            "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 4%, 0.2)",
+            "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 4%, 0.2)",
             "type": "color"
           },
           "link": {
@@ -546,7 +546,7 @@
             "type": "color"
           },
           "inverted": {
-            "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 100%, 1)",
+            "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 100%, 1)",
             "type": "color"
           }
         },
@@ -622,25 +622,25 @@
           "bg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 4%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 4%)"
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.translucent}, 4%, {config.color.grey.alpha.bg.default})"
+              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.translucent}, 4%, {config.color.primary.alpha.bg.default})"
             },
             "tone": {
               "type": "color",
-              "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 25%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 25%)"
             }
           },
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 4%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 4%)"
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.translucent}, 4%, {config.color.grey.alpha.border.default})"
+              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.translucent}, 4%, {config.color.primary.alpha.border.default})"
             }
           },
           "fg": {
@@ -658,11 +658,11 @@
             },
             "onTone": {
               "type": "color",
-              "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 85%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 85%)"
             },
             "onTranslucent": {
               "type": "color",
-              "value": "hsl({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 4%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 4%)"
             }
           }
         },
