--- a/tokens/config.json
+++ b/tokens/config.json
@@ -416,7 +416,7 @@
         },
         "saturation": {
           "default": {
-            "value": "5%",
+            "value": "140",
             "type": "other"
           },
           "translucent": {
