config > control border to 2px app > control border to control config button > checkbox > border to label (1px)
checkbox
checkbox > change accent to info color
app > focus border > applied correct focus token

color 
config > accent & primary color harmonisation
app > color harmonisation

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -199,7 +199,7 @@
           "type": "dimension"
         },
         "border": {
-          "value": "1px",
+          "value": "2px",
           "type": "dimension"
         }
       },
@@ -240,11 +240,11 @@
         },
         "saturation": {
           "default": {
-            "value": "5%",
+            "value": "4%",
             "type": "other"
           },
           "translucent": {
-            "value": "5%",
+            "value": "4%",
             "type": "other"
           }
         },
@@ -324,103 +324,17 @@
       "accent": {
         "hue": {
           "default": {
-            "value": "40",
-            "type": "other"
-          }
-        },
-        "saturation": {
-          "default": {
-            "value": "100%",
-            "type": "other"
-          },
-          "translucent": {
-            "value": "100%",
-            "type": "other"
-          }
-        },
-        "darken": {
-          "default": {
-            "value": "0.08",
-            "type": "other"
-          },
-          "hover": {
-            "value": "0.08",
-            "type": "other"
-          },
-          "active": {
-            "value": "0.16",
-            "type": "other"
-          }
-        },
-        "alpha": {
-          "bg": {
-            "default": {
-              "value": "0.16",
-              "type": "other"
-            },
-            "hover": {
-              "value": "0.24",
-              "type": "other"
-            },
-            "active": {
-              "value": "0.32",
-              "type": "other"
-            }
-          },
-          "border": {
-            "default": {
-              "value": "0.32",
-              "type": "other"
-            },
-            "hover": {
-              "value": "0.4",
-              "type": "other"
-            },
-            "active": {
-              "value": "0.48",
-              "type": "other"
-            }
-          },
-          "fg": {
-            "default": {
-              "value": "0.68",
-              "type": "other"
-            },
-            "hover": {
-              "value": "1",
-              "type": "other"
-            },
-            "active": {
-              "value": "1",
-              "type": "other"
-            }
-          }
-        },
-        "lighten": {
-          "default": {
-            "value": "0.8",
-            "type": "other"
-          },
-          "translucent": {
-            "value": "0.8",
-            "type": "other"
-          }
-        }
-      },
-      "primary": {
-        "hue": {
-          "default": {
             "value": "50",
             "type": "other"
           }
         },
         "saturation": {
           "default": {
-            "value": "5%",
+            "value": "4%",
             "type": "other"
           },
           "translucent": {
-            "value": "5%",
+            "value": "4%",
             "type": "other"
           }
         },
@@ -459,19 +373,121 @@
           },
           "border": {
             "default": {
-              "value": "0.16",
+              "value": "0.12",
               "type": "other"
             },
             "hover": {
-              "value": "0.2",
+              "value": "0.16",
               "type": "other"
             },
             "active": {
-              "value": "0.24",
+              "value": "0.2",
               "type": "other"
             },
             "subtle": {
+              "value": "0.08",
+              "type": "other"
+            }
+          },
+          "fg": {
+            "default": {
+              "value": "0.6",
+              "type": "other"
+            },
+            "hover": {
+              "value": "1",
+              "type": "other"
+            },
+            "active": {
+              "value": "1",
+              "type": "other"
+            }
+          }
+        },
+        "lighten": {
+          "default": {
+            "value": "0.8",
+            "type": "other"
+          },
+          "hover": {
+            "value": "0.8",
+            "type": "other"
+          },
+          "active": {
+            "value": "0.8",
+            "type": "other"
+          },
+          "translucent": {
+            "value": "0.8",
+            "type": "other"
+          }
+        }
+      },
+      "primary": {
+        "hue": {
+          "default": {
+            "value": "50",
+            "type": "other"
+          }
+        },
+        "saturation": {
+          "default": {
+            "value": "4%",
+            "type": "other"
+          },
+          "translucent": {
+            "value": "4%",
+            "type": "other"
+          }
+        },
+        "darken": {
+          "default": {
+            "value": "0.1",
+            "type": "other"
+          },
+          "hover": {
+            "value": "0.1",
+            "type": "other"
+          },
+          "active": {
+            "value": "0.2",
+            "type": "other"
+          }
+        },
+        "alpha": {
+          "bg": {
+            "default": {
+              "value": "0.06",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.1",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.14",
+              "type": "other"
+            },
+            "subtle": {
+              "value": "0.04",
+              "type": "other"
+            }
+          },
+          "border": {
+            "default": {
               "value": "0.12",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.16",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.2",
+              "type": "other"
+            },
+            "subtle": {
+              "value": "0.08",
               "type": "other"
             }
           },
