--- a/tokens/application.json
+++ b/tokens/application.json
@@ -574,35 +574,35 @@
           "bg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 45%)"
+              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 4%)"
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.translucent}, 45%, {config.color.accent.alpha.bg.default})"
+              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.translucent}, 4%, {config.color.accent.alpha.bg.default})"
             },
             "tone": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 20%)"
+              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 25%)"
             }
           },
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 40%)"
+              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 4%)"
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.translucent}, 45%, {config.color.accent.alpha.border.hover})"
+              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.translucent}, 4%, {config.color.accent.alpha.border.hover})"
             }
           },
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 35%)"
+              "value": "{app.color.surface.fg.default}"
             },
             "muted": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 40%, {config.color.accent.alpha.fg.default})"
+              "value": "{app.color.surface.fg.muted}"
             },
             "onSolid": {
               "type": "color",
@@ -614,7 +614,7 @@
             },
             "onTranslucent": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 20%)"
+              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 4%)"
             }
           }
         },
@@ -963,7 +963,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{config.color.info.darken.default}",
+                    "value": "{config.color.info.darken.focus}",
                     "space": "hsl"
                   }
                 }
