--- a/tokens/config.json
+++ b/tokens/config.json
@@ -97,7 +97,7 @@
       },
       "title": {
         "text": {
-          "value": "{config.fontSize.base} * 2",
+          "value": "{config.fontSize.base} * 1.5",
           "type": "fontSizes"
         },
         "symbol": {
@@ -127,7 +127,7 @@
       },
       "callout": {
         "text": {
-          "value": "{config.fontSize.base}",
+          "value": "{config.fontSize.base} - 0.125rem",
           "type": "fontSizes"
         },
         "symbol": {
